--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,16 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>All in one Apps</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link
+		<!-- <link
+			href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/sketchy/bootstrap.min.css"
 			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-			integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+			integrity="sha384-NkI/Nlr1DZ5rUXWWdnuZb97FQRgCCcwC66DC+HUCY0oVx6BgBHUfPcwL1vwp93JZ"
+			crossorigin="anonymous"
+		/> -->
+		<link
+			href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/lumen/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-VMuWne6iwiifi8iEWNZMw8sDatgb6ntBpBIr67q0rZAyOQwfu/VKpnFntQrjxB5W"
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
